--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -142,7 +142,52 @@
             </nav>
         </header>
         <!-- /header -->
-        <div class="separator"><span style="border: none; clear: right; display: inline-block; float: right; height: 276px; margin-bottom: 1em; margin-left: 1em; overflow: hidden; width: 279px;"><img height="276" src="https://lh4.googleusercontent.com/LZAvwpg5hb62bhBHlSnMuikp0hXiOnx7kfsxVlHGvKMsR8yQiyNI1lXAanihwUGKMx6UbYDmjzzcPY1PRl4lqXQEEVBOw_S00teLiwAmBP_7cEsUb66qvtVVBc2fAa5Jo-F_gBA=s1600" style="margin-left: 0px; margin-top: 0px;" width="279" /></span></div><span id="docs-internal-guid-a92ad940-7fff-0563-b932-7d5caf7c1b93"><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 15pt; font-variant-east-asian: normal; font-variant-numeric: normal; font-weight: 700; vertical-align: baseline; white-space: pre-wrap;"><br /></span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 15pt; font-variant-east-asian: normal; font-variant-numeric: normal; font-weight: 700; vertical-align: baseline; white-space: pre-wrap;">“Azure wavy, with a mullet argent; a chief gules with three chevrons or,”</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 15pt; font-variant-east-asian: normal; font-variant-numeric: normal; font-weight: 700; vertical-align: baseline; white-space: pre-wrap;"><br /></span></p><br /><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 13pt; font-variant-east-asian: normal; font-variant-numeric: normal; vertical-align: baseline; white-space: pre-wrap;">That in plain English means that the shield is divided into two sections by a horizontal line one third of the way down. On the main section of the Shield, which is divided by wavy lines, is a five pointed star or mullet. On the chief or top bit, which is red in colour (or gules), are to be found three chevrons or inverted, “V’s.” &nbsp; This is a layman’s way of expressing what the heraldry student has put in unintelligible terms in the first sentence.</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 13pt; font-variant-east-asian: normal; font-variant-numeric: normal; vertical-align: baseline; white-space: pre-wrap;"><br /></span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 13pt; font-variant-east-asian: normal; font-variant-numeric: normal; vertical-align: baseline; white-space: pre-wrap;">In heraldry everything has a specific reason for its inclusion in the Coat of Arms, the blue and red (or azure and gules) are the colours of St. La Salle after whom the School is named. Red too, stands for valour, and blue for endurance or perseverance. The Silver Star, of course, represents the Brothers, and will be found in every one of the badges in Brothers’ schools. It is on a background of light and dark blue wavy bands and so this Brothers’ school is on the seaside. The chevrons are also taken from the arms of St. La Salle. The motto comes from the same source and means, “We stand undivided.”&nbsp;</span></p><br /><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 13pt; font-variant-east-asian: normal; font-variant-numeric: normal; vertical-align: baseline; white-space: pre-wrap;">There then in a pictorial nutshell is every thing. A Brothers’ School on the sea-shore which is called De La Salle College, in which the boys are brave and tenacious and who always offer “a united front” and give one another mutual support.&nbsp;</span></p><br /><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 13pt; font-variant-east-asian: normal; font-variant-numeric: normal; vertical-align: baseline; white-space: pre-wrap;">Grand, isn’t it ?&nbsp;</span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: justify;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 13pt; font-variant-east-asian: normal; font-variant-numeric: normal; vertical-align: baseline; white-space: pre-wrap;">&nbsp;&nbsp;</span><span style="color: navy; font-family: &quot;Gentium Basic&quot;, serif; font-size: 13pt; font-variant-east-asian: normal; font-variant-numeric: normal; vertical-align: baseline; white-space: pre-wrap;">&nbsp;</span></p><br /></span>
+        <!-- Content wrapper -->
+        <div class="contents-wrapper">
+            <!-- Contents starts here -->
+            <div class="contents">
+                <div style="text-align: center;">
+                    <h3></h3>
+                </div>
+                <div style="text-align: center;">
+                    <a href="#" target="_blank">
+                        <img class="responsive-img" src="https://lh4.googleusercontent.com/LZAvwpg5hb62bhBHlSnMuikp0hXiOnx7kfsxVlHGvKMsR8yQiyNI1lXAanihwUGKMx6UbYDmjzzcPY1PRl4lqXQEEVBOw_S00teLiwAmBP_7cEsUb66qvtVVBc2fAa5Jo-F_gBA=s1600" style="width: 250px; height:250px;">
+                    </a>
+                </div>
+                <br/>
+                <p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 15pt; font-variant-east-asian: normal; font-variant-numeric: normal; font-weight: 700; vertical-align: baseline; white-space: pre-wrap;"><br /></span></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><span style="font-family: &quot;Gentium Basic&quot;, serif; font-size: 15pt; font-variant-east-asian: normal; font-variant-numeric: normal; font-weight: 700; vertical-align: baseline; white-space: pre-wrap;">“Azure wavy, with a mullet argent; a chief gules with three chevrons or,”</span></p>
+                
+                <br/> That in plain English means that the shield is divided into two sections by a horizontal line one third of the way down. On the main section of the Shield, which is divided by wavy lines, is a five pointed star or mullet. On the chief or top bit, which is red in colour (or gules), are to be found three chevrons or inverted, “V’s.”   This is a layman’s way of expressing what the heraldry student has put in unintelligible terms in the first sentence.
+
+                <br/>
+            </div>
+        </div>
+
+        <div class="contents-wrapper">
+            <!-- Contents starts here -->
+            <div class="contents">
+                <div style="text-align: center;">
+                    <h3>Our Mission</h3>
+                </div>
+                <div style="text-align: center;">
+                    <a href="#" target="_blank">
+                        <img class="responsive-img" src="../img/IIITV_Logo_1x1_small.jpg" style="width: 250px; height:250px;">
+                    </a>
+                </div>
+                <br/>
+                <br/> De La Salle College, Colombo aspires to provide an environment which
+                actively encourages all members to strive to achieve personal excellence through a
+                challenging, comprehensive curriculum and a variety of teaching styles.
+                
+                The curriculum aims to address student’s need for personal growth, to arrive at an
+                appreciation of their culture, to address the expectations of the world of work and
+                the challenges of a rapidly changing society which establishes a climate in which
+                students are encouraged to strive for increasing levels of self - discipline and
+                responsibility and where students, staff and parents experience co-operation and
+                mutual support
+                <br/>
+            </div>
+        </div>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
