--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                         <div class="header-links">
-                            <a href="#" data-toggle="popover" title="Address" data-content="c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
+                            <a href="#" data-toggle="popover" title="Address" data-content=" 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
                             <a href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
                             <a href="#" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
                         </div>
@@ -149,7 +149,7 @@
             <!-- Contents starts here -->
             <div class="contents">
                 <div style="text-align: center;">
-                    <h3></h3>
+                    <h2 style="box-sizing: border-box; color: #021f40; font-family: &quot;Goudy Old Style&quot;; font-size: 36px; line-height: 24px; margin: 30px 0px; text-align: center;">College Cres </h2>
                 </div>
                 <div style="text-align: center;">
                     <a href="#" target="_blank">
