--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -149,7 +149,7 @@
             <!-- Contents starts here -->
             <div class="contents">
                 <div style="text-align: center;">
-                    <h2 style="box-sizing: border-box; color: #021f40; font-family: &quot;Goudy Old Style&quot;; font-size: 36px; line-height: 24px; margin: 30px 0px; text-align: center;">College Cres </h2>
+                    <h2 style="box-sizing: border-box; color: #021f40; font-family: &quot;Goudy Old Style&quot;; font-size: 36px; line-height: 24px; margin: 30px 0px; text-align: center;">College Crest </h2>
                 </div>
                 <div style="text-align: center;">
                     <a href="#" target="_blank">
