--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -76,7 +76,7 @@
                                         <li><a href="../rti.html">RTI</a></li>
                                         <li><a href="../pdf/MOU.pdf">MOU</a></li>
                                         <li><a href="../pdf/IIITV-Regulations.pdf">Rules and Regulations</a></li>
-                                        <!--li class="dropdown-submenu active">
+                                        <li class="dropdown-submenu active">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
                                             <ul class="dropdown-menu">
                                                 <li class="active"><a href="mission-vision.html">Vission & Mission</a></li>
@@ -84,7 +84,7 @@
                                                 <li><a href="germi.html">GERMI</a></li>
                                                 <li><a href="tcs.html">TCS</a></li>
                                             </ul>
-                                        </li-->
+                                        </li>
                                     </ul>
                                 </li>
                                 <li>
