--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -56,6 +56,7 @@
                             </div>
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
+                                <li><a href="../index.html">Home</a></li>
                                 <li class="active">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
