--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -55,21 +55,21 @@
                                 </button>
                             </div>
                         <div class="collapse navbar-collapse">
-                            iv class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
-                              <li> <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown"><font size="2"> <strong> Institute  </font> <b class="caret"></b></strong>  </a>
-                                <ul class="dropdown-menu multi-level">
-                                  <li><a href="http://iiitvadodara.ac.in/about.php">About</a></li>
-                                  <li><a href="http://iiitvadodara.ac.in/vision.php">Vision | Mission | Objective </a></li>  
-                                  <li><a href="http://iiitvadodara.ac.in/directors_message.php">Director's Message</a></li>
-                                    
-                                    <li class="dropdown-submenu"> <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown">Statutory Committee</a>
-                                       <ul class="dropdown-menu">
-                                      <li><a href="http://iiitvadodara.ac.in/bog.php">Board of Governors</a></li>
-                                      <li><a href="http://iiitvadodara.ac.in/senate.php">Senate</a></li>	
-                                      <li><a href="http://iiitvadodara.ac.in/finance_committee.php">Finance Committee</a></li>	 
-                                        </ul>
-                                    </li>
+                                <li><a href="../index.html">Home</a></li>
+                                <li class="active">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
+                                    <ul class="dropdown-menu multi-level">
+                                        <li><a href="../about.html">About</a></li>
+                                        <li class="dropdown-submenu active">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                            <ul class="dropdown-menu">
+                                                <li class="active"><a href="mission-vision.html">Vission & Mission</a></li>
+                                                <li><a href="gsfc.html">GSFC</a></li>
+                                                <li><a href="germi.html">GERMI</a></li>
+                                                <li><a href="tcs.html">TCS</a></li>
+                                            </ul>
+                                        </li>
                                         <li><a href="../directors_message.html">Director's Message</a></li>
                                         <li><a href="../society_members.html">Society Members</a></li>
                                         <li><a href="../academic_council.html">Academic Council</a></li>
