--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -59,15 +59,16 @@
                                 <li><a href="../index.html">Home</a></li>
                                 <li class="active">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
-                                    <li><a href="about.html">About</a></li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="Identity/mission-vision.html">Vision & Mission</a></li>
-                                            <li><a href="Identity/college-motto-and-flag_colours.html">Flag</a></li>
-                                            <li><a href="Identity/college-crest.html">Crest</a></li>
-                                            <li><a href="college-anthem.html">College Anthem</a></li>
-                                        </ul>
+                                    <ul class="dropdown-menu multi-level">
+                                        <li><a href="../about.html">About</a></li>
+                                        <li class="dropdown-submenu active">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="mission-vision.html">Vission & Mission</a></li>
+                                                <li><a href="college-motto-and-flag_colours.html">Flag</a></li>
+                                                <li class="active"><a href="college-crest.html">Crest</a></li>
+                                                <li><a href="college-anthem.html">College Anthem</a></li>
+                                            </ul>
                                         </li>
                                         <li><a href="../directors_message.html">Director's Message</a></li>
                                         <li><a href="../society_members.html">Society Members</a></li>
