--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -66,8 +66,8 @@
                                             <ul class="dropdown-menu">
                                                 <li><a href="mission-vision.html">Vission & Mission</a></li>
                                                 <li><a href="college-motto-and-flag_colours.html">Flag</a></li>
-                                                <li class="active"><a href="/college-crest.html">Crest</a></li>
-                                                <li><a href="/college-anthem.html">College Anthem</a></li>
+                                                <li class="active"><a href="college-crest.html">Crest</a></li>
+                                                <li><a href="dls/college-anthem.html">College Anthem</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="../directors_message.html">Director's Message</a></li>
