--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -58,7 +58,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="../index.html">Home</a></li>
                                 <li class="active">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">institute</a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="../about.html">About</a></li>
                                         <li class="dropdown-submenu active">
