--- a/view-events.html
+++ b/view-events.html
@@ -8,7 +8,6 @@
         <!--Style Starts-->
         <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
         <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/scroll.css">
@@ -136,7 +135,16 @@
             </nav>
         </header>
         <!-- /header -->
-       
+        <style> 
+            /* Set a background image by replacing the URL below */
+        body {
+          background: url('https://1.bp.blogspot.com/-X_QtxPzJfaY/YHLHGMs_EFI/AAAAAAAACTY/TZrMQDEtu3oVozUxEQj0VzLJYrFyn9iMACLcBGAsYHQ/s16000/Flag%2B%25281%2529.gif') no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          background-size: cover;
+          -o-background-size: cover;
+        }
+            </style>
         <!-- Page Content -->
 <div class="container">
     <div class="card border-0 shadow my-5">
