--- a/view-events.html
+++ b/view-events.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>De La Salle College Colombo 15 | Events</title>
-           <!--Style Starts-->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>De La Salle College Colombo 15 | Events</title>
+    <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-
-    </head>
+</head>
 
 <body>
     <!-- Start Your Body Code From here -->
@@ -136,109 +135,3 @@
             </nav>
         </header>
         <!-- /header -->
-        <style> 
-            /* Set a background image by replacing the URL below */
-        body {
-          background: url('https://1.bp.blogspot.com/-X_QtxPzJfaY/YHLHGMs_EFI/AAAAAAAACTY/TZrMQDEtu3oVozUxEQj0VzLJYrFyn9iMACLcBGAsYHQ/s16000/Flag%2B%25281%2529.gif') no-repeat center center fixed;
-          -webkit-background-size: cover;
-          -moz-background-size: cover;
-          background-size: cover;
-          -o-background-size: cover;
-        }
-            </style>
-        <!-- Page Content -->
-<div class="container">
-    <div class="card border-0 shadow my-5">
-      <div class="card-body p-5">
-        <h1 class="fw-light">Fixed Full Page Background Image</h1>
-        <p class="lead">In this snippet, the background image is fixed to the body element. Content on the page will
-          scroll, but the image will remain in a fixed position!</p>
-        <p class="lead">Scroll down...</p>
-        <div style="height: 700px"></div>
-        <p class="lead mb-0">You've reached the end!</p>
-      </div>
-    </div>
-  </div>
-  
-        <!-- Footer -->
-        <footer>
-            <div class="footer-wrapper">
-                <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
-                <div class="row">
-                    <div class="col-sm-4 address">
-                        <strong>Address : </strong>c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
-                    </div>
-                    <div class="col-sm-4 links">
-                        <div>
-                            <a href="index.html#news">News</a>
-                            <i class="seperator"></i>
-                            <a href="index.html#announcements">Announcement</a>
-                            <i class="seperator"></i>
-                            <a href="index.html#events">Events</a>
-                        </div>
-                        <div>
-                            <a href="index.html">Home</a>
-                            <i class="seperator"></i>
-                            <a href="rti.html">RTI</a>
-                            <i class="seperator"></i>
-                            <a href="pdf/MOU.pdf">MOU</a>
-                        </div>
-                        <div>
-                            <a href="admissions.html">Admission</a>
-                            <i class="seperator"></i>
-                            <a href="student_corner.html">Student</a>
-                            <i class="seperator"></i>
-                            <a href="faculty.html">Faculty</a>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 footer-social">
-                        <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
-                                        title="Official Facebook Page"></i></a>
-                        <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
-                                                              title="Github Group"></i></a>
-                        <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
-                        <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
-                                                 title="Official Twitter Account"></i></a>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </div>
-
-    <!--Scripts Starts-->
-    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/434d359724.js"></script>
-    <script>
-    $(document).on('click', function (e) {
-    var
-        $popover,
-        $target = $(e.target);
-
-    //do nothing if there was a click on popover content
-    if ($target.hasClass('popover') || $target.closest('.popover').length) {
-        return;
-    }
-
-    $('[data-toggle="popover"]').each(function () {
-        $popover = $(this);
-
-        if (!$popover.is(e.target) &&
-            $popover.has(e.target).length === 0 &&
-            $('.popover').has(e.target).length === 0)
-        {
-            $popover.popover('hide');
-        } else {
-            //fixes issue described above
-            $popover.popover('toggle');
-        }
-    });
-})
-
-  
-
-    </script>
-</body>
-
-
-</html>
