--- a/view-events.html
+++ b/view-events.html
@@ -1,3 +1,9 @@
+<!--
+ * Official Website of De La Salle College, Colombo-15
+ * A project of SJC ICTS 2021 Batch
+ * Design & Develop by : Kasun Chanuka Fernando,
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -42,6 +48,227 @@
                     </div>
                 </div>
             </div>
+            <style>
+                /*-------------------------------------------------*/
+/* = 21.MEGA MENU 
+/*-------------------------------------------------*/
+ .mm-pos{
+     position: absolute;
+     width: 100%;
+     right: 0px;
+     left: 0px;
+}
+ .about-mm, .admi-mm, .cour-mm{
+     display:none;
+}
+ .m-menu{
+     position: absolute;
+     overflow: hidden;
+     width: 100%;
+     box-shadow: 0px 7px 12px -4px rgba(0, 0, 0, 0.45);
+     background: /*url('../images/mm-col-bg-.png') no-repeat right bottom,*/ #fff;
+     z-index: 999;
+     margin-top: -7px;
+     padding: 20px 10px;
+}
+ .m-menu-inn{
+}
+ .mm1-com{
+     width: 25%;
+     float: left;
+     box-sizing: border-box;
+     padding: 20px;
+     border-right: 1px solid #eaeaea;
+}
+.mm1-com h4{
+	border-bottom: 1px solid #eaeaea;
+	padding-bottom:10px;
+	margin-bottom:10px;
+	text-transform:uppercase;
+	font-size:14px;
+}
+ .mm1-com ul{
+}
+ .mm1-com ul li{
+     display: block;
+     width: 100%;
+	 position: relative;
+     padding-left: 15px;		
+}
+ .mm1-com ul li a{
+     font-size: 15px;
+     color: #203245;
+     line-height: 31px;
+     padding: 5px;
+	text-transform: capitalize; 
+}
+ .mm1-com ul li a:hover{
+}
+ .mm1-com ul li a:after {
+     bottom: 0px;
+}
+ .mm1-cour-com{
+     width: 20%;
+}
+.ed-dr-men-mar-top{
+    padding-top: 30px;
+    display: inline-block;
+}
+ .mm1-s1{
+}
+ .mm1-s1 img{
+     width: 100%;
+}
+ .mm1-s2{
+}
+ .mm1-s2 p{
+     font-size: 15px;
+     color: #203245;
+}
+ .mm1-s2 a{
+}
+ .mm1-s3{
+}
+ .mm1-s3 ul{
+}
+ .mm1-s4{
+     border-right: 0px solid #eaeaea;
+}
+ .mm-arr:after {
+}
+ .m-menu-inn > .mm1-s2 > .mm-r-m-btn{
+     background: #0A0B3B;
+     padding: 4px 10px;
+     color: #fff;
+     font-size: 11px;
+     border-radius: 3px;
+     height: 30px;
+     line-height: 24px;
+}
+ .mm1-com > .ed-course-in > a{
+     padding:0px;
+}
+ .mm2-com{
+}
+ .mm2-com p{
+     font-size: 12px;
+     color: #203245;
+}
+ .mm2-com > .ed-course-in{
+     margin-bottom:15px;
+}
+ .m-menu-inn > .mm2-com > a{
+     background: #0A0B3B;
+     padding: 4px 10px;
+     color: #fff;
+     font-size: 11px;
+     border-radius: 3px;
+     height: 30px;
+     line-height: 24px;
+}
+.m-menu-inn ul li:before {
+content: "\f105";
+font-family: FontAwesome;
+font-style: normal;
+font-weight: normal;
+text-decoration: inherit;
+            </style>
+            <!-- MOBILE MENU -->
+    <section>
+        <div class="ed-mob-menu">
+            <div class="ed-mob-menu-con">
+                <div class="ed-mm-left">
+                    <div class="wed-logo">
+                        <a href="index.php.html">
+                            <img src="images/College&#32;Crest.png" alt="" style="width:55px;height:70px;"/>
+						</a>
+                    </div>
+                </div>
+                <div class="ed-mm-right">
+                    <div class="ed-mm-menu">
+                        <a href="announcements.php.html#!" class="ed-micon"><i class="fa fa-bars"></i></a>
+                        <div class="ed-mm-inn">
+                            <a href="announcements.php.html#!" class="ed-mi-close"><i class="fa fa-times"></i></a>
+                            <h4><a href="index.php.html" style="font-size: 18px;">St. Joseph's College Colombo-10</a></h4>
+                                <ul>
+                                    <li></li>
+                                </ul>
+
+                            <ul>
+                                <li><a href="news.php.html">News</a></li>
+                                <li><a href="announcements.php.html">Announcements</a></li>
+                                <!--li><a href="under-constructionpage.php">e-Learning Portal</a></li-->
+                            </ul>
+                            <h4><a href="index.php.html" style="font-size: 18px;">Home</a></h4>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            <h4>About Our College</h4>
+                                <ul>
+                                <li><a href="about-college.php.html">About St.Joseph's College</a></li>
+                                    <!--li><a href="about-rectors-message.php">Rector's Message</a></li-->
+                                    <li><a href="about-history.php.html">History  of our College</a></li>
+                                    <li><a href="about-rectors.php.html">Past Rectors</a></li>
+                                    <!--li><a href="under-constructionpage.php">Founders</a></li>
+                                    <li><a href="under-constructionpage.php">Notable alumni</a></li-->
+                                </ul>
+                            <h4>Identity</h4>
+                                <ul>
+                                    <li><a href="identity-mission-vision.php.html">Vision & Mission</a></li>
+                                    <li><a href="identity-flag.php.html">Flag</a></li>
+                                    <li><a href="identity-crest.php.html">Crest</a></li>
+                                    <li><a href="identity-anthem.php.html">College Anthem</a></li>
+                                </ul>
+                            <h4>College Academics</h4>
+                                <ul>
+                                    <li><a href="academic-primary.php.html">Primary School</a></li>
+                                    <li><a href="academic-middle.php.html">Middle School</a></li>
+                                    <li><a href="academic-upper.php.html">Upper School</a></li>
+                                    <li><a href="academic-al.php.html">A/L Section</a></li>
+                                </ul>
+                            <h4>Life at Joes</h4>
+                                <ul>
+                                    <li><a href="life-academic.php.html">Academic Life</a></li>
+                                    <li><a href="life-cocurricular.php.html">Co-Curricular Life</a></li>
+                                    <li><a href="life-community.php.html">Community Life</a></li>
+                                    <li><a href="life-personal.php.html">Personal Life</a></li>
+                                </ul>
+                            <h4>Co-Curricular Activities</h4>
+                                <ul>
+                                    <li><a href="curricular-sports.php.html">Games & Sports</a></li>
+                                    <li><a href="curricular-societies.php.html">Clubs & Scoieties</a></li>
+                                </ul>
+                            <!--h4>Achievements</h4>
+                                <ul>
+                                    <li><a href="achievements-academic.php">Academic</a></li>
+                                    <li><a href="under-constructionpage.php">Sports</a></li>
+                                    <li><a href="under-constructionpage.php">Extracurricular Activities</a></li>
+                                </ul-->
+                            <h4>Student Leaders</h4>
+                                <ul>
+                                    <li><a href="leaders-prefectsbody.php.html">Prefects' Body</a></li>
+                                    <!--li><a href="under-constructionpage.php">Stewards</a></li-->
+                                </ul>
+                            <h4>Rules and Regulations</h4>
+                                <ul>
+                                    <!--li><a href="under-constructionpage.php">General Rules at School</a></li-->
+                                    <li><a href="rules-discipline.php.html">Discipline</a></li>
+                                </ul>
+                            <h4><a href="gallery.php.html" style="font-size: 18px;">Gallery</a></h4>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            <h4><a href="https://sjcobu.lk/" target="_blank" style="font-size: 18px;">Old Boys' Union</a></h4>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            <h4><a href="contact-us.php.html" style="font-size: 18px;">Contact Us</a></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
             <nav>
                 <div class="navbar navbar-inverse navbar-custom" role="navigation">
                     <div class="container">
