--- a/view-events.html
+++ b/view-events.html
@@ -1335,10 +1335,10 @@ all and (min-device-pixel-ratio:1.5) {
       <div class="timeline-breaker">Monday</div>
       <!--Timeline item 1-->
       <div class="timeline-item mt-3 row text-center p-2">
-        <div class="col font-weight-bold text-md-right">West Ham</div>
+        <div class="col font-weight-bold text-md-right">None</div>
         <div class="col-1">vs</div>
-        <div class="col font-weight-bold text-md-left">Chelsea</div>
-        <div class="col-12 text-xs text-muted">Football - English Premier League - 19:45 GMT</div>
+        <div class="col font-weight-bold text-md-left">None</div>
+        <div class="col-12 text-xs text-muted">Not Yet</div>
       </div>
       <!--Timeline item 2 - NOTE: the .right class-->
       <div class="timeline-item mt-3 row text-center p-2">
