--- a/obu.html
+++ b/obu.html
@@ -24,7 +24,7 @@
                     <div>
                         <div class="logo-name">
                             <div class="logo">
-                                <a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png" alt="logo"></a>
+                                <a href="index.html" title=""><img src="img/dlsobucrest.jpg" alt="logo"></a>
                             </div>
                             <div class="name">
                                 <a href="index.html" title="">
