--- a/obu.html
+++ b/obu.html
@@ -240,7 +240,7 @@
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
-                <span class="logo"><img src="img/dlsobucrest.jpg" alt=""></span>
+                <span class="logo"><img src="img/dlsobucrest.png" alt=""></span>
                 <div class="row">
                     <div class="col-sm-4 address">
                         <strong>Address : </strong>c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
