--- a/gallery.html
+++ b/gallery.html
@@ -267,7 +267,7 @@
                         --> <img src="img/gallery/11.jpg" alt="">
                     </a>
 
-                    <!--Image 11-->
+                    <!--Image 12-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/12.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
@@ -276,6 +276,15 @@
                                                     </div>
                         --> <img src="img/gallery/12.jpg" alt="">
                     </a>
+
+                    <!--Image 13-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/13.png">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/13.png" alt="">
 
                 </div>
             </div>
