--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
 </head>
 
 <body id="gallery">
