--- a/obu.html
+++ b/obu.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/materialize.css">
 </head>
 
 <body>
@@ -161,32 +162,7 @@
                             </li>
                             <li><img class="materialboxed" data-caption="" src="img/gallery/13.png" alt="">
                             </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/15.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/25.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/18.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/20.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/24.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/28.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/29.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/30.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/34.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/47.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/59.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/60.jpg" alt="">
-                            </li>
-                            <li><img class="materialboxed" data-caption="" src="images/gallery/52.jpg" alt="">
-                            </li>
+                        
                         </ul>
                             <p><a href="gallery.php.html" class="read-line-btn">Read More</a></p>
                         </div>
