--- a/obu.html
+++ b/obu.html
@@ -265,7 +265,9 @@
                 <div class="col-md-4">
                     <div class="bot-gal h-vid ho-event-mob-bot-sp">
                         <h4>Video Gallery</h4>
-                        <video src="vid/DLS-INTRO-HD.mp4" allowfullscreen> </video>
+                        <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" width="100%" height="auto">
+                            <source src="vid/DLS-INTRO-HD.mp4" type="video/mp4">
+                        </video>
                         <h5>116<sup>th</sup> Anniversary of De La Salle College</h5>
 						<p>We happy to say DLS celebrates 125<sup>th</sup> anniversary on year 2021. </p>
                     </div>
