--- a/obu.html
+++ b/obu.html
@@ -237,7 +237,7 @@
                     <p></p>
             </div>
         </div>
-         <!-- VIDEO -->
+         <!-- MEDIA -->
     <section>
         <div class="container com-sp">
             <div class="row">
@@ -265,9 +265,7 @@
                 <div class="col-md-4">
                     <div class="bot-gal h-vid ho-event-mob-bot-sp">
                         <h4>Video Gallery</h4>
-                        <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" width="100%" height="auto">
-                            <source src="vid/DLS-INTRO-HD.mp4" type="video/mp4">
-                        </video>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/56v6qabWJAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h5>116<sup>th</sup> Anniversary of De La Salle College</h5>
 						<p>We happy to say DLS celebrates 125<sup>th</sup> anniversary on year 2021. </p>
                     </div>
