--- a/blog.html
+++ b/blog.html
@@ -151,7 +151,7 @@
                                                 <label>OCT</label>
                                             </div>
                                             <a href="#">
-                                                <img src="https://scontent.fcmb3-2.fna.fbcdn.net/v/t39.30808-6/241210380_4554607584596594_4643022653916699749_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=0debeb&_nc_ohc=PA3tbECThqAAX8YsxmZ&_nc_ht=scontent.fcmb3-2.fna&oh=ff81e677ad81997c1904a04fc28e764a&oe=617461A7" title="" alt="">
+                                                <img src="blogs/src/welcoming rev bro jayakanthan.jpg" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
