--- a/obu.html
+++ b/obu.html
@@ -139,14 +139,14 @@
                     <img class="responsive-img" src="img/Obu/DLS_OBU_ MAIN_HEAD.png">
                 </a>
             </div>
+            <section>
         <!-- Content wrapper -->
         <div class="contents-wrapper">
             <!-- Contents starts here -->
             <div class="content">
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
 <style>
-    body{margin-top:20px;
-}
+ 
 .blog-post {
   -webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) 0s;
   transition: all 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) 0s;
@@ -333,6 +333,7 @@
                         </div><!--end col-->
                     </div><!--end row-->
                 </div>
+            </section>
          <!-- MEDIA -->
     <section>
         <style>
