--- a/obu.html
+++ b/obu.html
@@ -154,7 +154,7 @@
 
 .blog-post .blog-img .overlay,
 .blog-post .blog-img .post-meta {
-  position: absolute;
+  position: relative;
   opacity: 0;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
@@ -225,8 +225,8 @@
     height: 36px;
 }
 .shadow {
-    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15) !important;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15) !important;
+    -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.15) !important;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15) !important;
 }
 
 .text-muted {
