--- a/college-anthem.html
+++ b/college-anthem.html
@@ -204,8 +204,10 @@
                     	
             </div>
         </div>
+    </div>
     </section>
             </div>
+        </div>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
