--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -147,7 +147,11 @@
             <div class="contents" style="text-align:center;">
                 
                 <p><b id="docs-internal-guid-0870b9ca-7fff-8ea7-0101-71917fa4a704" style="font-weight: normal;"><br /></b></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><span style="background-color: transparent; color: black; font-family: Balthazar,serif; font-size: 20pt; font-style: normal; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">College &nbsp; Motto, Flag&nbsp; &amp;&nbsp; Colours</span></p><div class="separator" style="clear: both; text-align: center;"><span style="border: none; display: inline-block; height: 284px; margin-left: 1em; margin-right: 1em; overflow: hidden;"></span></div>
+                <div style="text-align: center;">
+                    <a href="#" target="_blank">
                 <img class="responsive-img" src="gif/wave flag animation1_1.gif">
+            </a>
+        </div>
                 <center><h3>The Motto</h3> </center>
                 <p>“Indivisa Manent” meant in English is “We Stand Undivided” signifies INSEPEPARABLE BROTHERHOOD, a motto of the La Salle family which the Brothers came to cherish.</p>
 
