--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -147,7 +147,7 @@
             <div class="contents" style="text-align:center;">
                 
                 <h4>College Flag</h4>
-                <center><img src="gif/wave-flag animation1_1.gif" alt="" style="width: 400px;"></center
+                <center><img src="gif/wave-flag animation1.gif" alt="" style="width: 400px;"></center
                 <center><h3>The Motto</h3> </center>
                 <p style="text-align: center;">
                     Red - the colours of St. John Baptist De La Salle<br>
