--- a/obu.html
+++ b/obu.html
@@ -238,7 +238,7 @@
             </div>
         </div>
         <section class="sec5">
-            <video autoplay muted playsinline autobuffer loop class="desktopVideo">
+            <video autoplay muted playsinline autobuffer loop class="desktopVideo" width="100%" height="auto"></video>>
               <source src="vid/DLS-INTRO-HD.mp4" type="video/mp4">
             </video>
         
