--- a/obu.html
+++ b/obu.html
@@ -242,7 +242,7 @@
               <source src="vid/DLS-INTRO-HD.mp4" type="video/mp4">
             </video>
         
-            <video muted playsinline autobuffer loop controls class="mobileVideo">
+            <video muted playsinline autobuffer loop controls class="mobileVideo" width="100%" height="400">
               <source src="vid/wave flag animation1_1.mp4" type="video/mp4">
             </video>
         </section>
