--- a/obu.html
+++ b/obu.html
@@ -237,6 +237,28 @@
                     <p></p>
             </div>
         </div>
+        <style>
+            .sec3, .sec6, .sec7, .sec8, footer, .aboutSec2, .aboutSec3, .aboutSec5 {padding: 7vw;}
+  .sec3Box {float: none; height: 100vw; width: 82vw; margin: 10vw auto 13vw; padding: 3vw 5vw 5vw;}
+  .sec3Box ul {height: 82vw;}
+  .sec3Box ul li {margin-bottom: 5vw;}
+  .sec3Box .tagBox {padding: 1.5vw 3.5vw; margin-left: -7.5vw; margin-bottom: 2vw;}
+  .sec3Box .tagBox span {font-size: 4vw;}
+
+
+
+
+  .sec4 {padding: 40vw 0vw 0vw;}
+  .sec4Bg {height: 70vh; background-size: cover; background-position: center !important;}
+  .sec4Text {padding: 5vw; max-width: 87vw; margin-right: 7vw; margin-top: -30vw;}
+
+
+
+
+  .desktopVideo {display: none;}
+  .mobileVideo {display: block;}
+
+        </style>
         <section class="sec5">
             <video autoplay muted playsinline autobuffer loop class="desktopVideo" width="100%" height="400">
               <source src="vid/DLS-INTRO-HD.mp4" type="video/mp4">
