--- a/obu.html
+++ b/obu.html
@@ -251,6 +251,47 @@
     box-shadow: 5px 5px 10px 0px #a9a4a4;
     animation-delay: 1s;
 }
+.sec3Box .tagBox {
+  background-color: #ef8444;
+  padding: 0.5vw 1.5vw;
+  color: #fff;
+  letter-spacing: 0.05vw;
+  display: inline-block;
+  margin-left: -2.5vw;
+  margin-bottom: 1vw;
+}
+.sec3Box .tagBox span {/*border-bottom: 1px solid #ffffff;*/font-size: 1.2vw}
+.sec3Box .tagBox.color1 {background-color: #e6ac41;}
+.sec3Box .tagBox.color2 {background-color: #ef8444;}
+.sec3Box .tagBox.color3 {background-color: #de6379;}
+.sec3Box ul {
+    position: relative;
+    height: 25vw;
+    padding-left: 0;
+    overflow-y: hidden;
+    margin: 0;
+    padding-right: 1vw;
+    list-style-type: none;
+}
+.sec3Box ul.scrollBar {overflow-y: scroll;}
+.sec3Box ul.scrollBar::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 6px rgb(226, 226, 226); background-color: rgb(226, 226, 226);}
+.sec3Box ul.scrollBar::-webkit-scrollbar {width: 0.34vw;background-color: #ffffff;}
+.sec3Box ul.scrollBar::-webkit-scrollbar-thumb {background-color: #949494; border-radius: 5vw;}
+.sec3Box ul li {padding-left: 1vw; margin-bottom: 1.2vw;}
+/*.sec3Box ul li a {color: #5a5a5a;}*/
+#TenderCarousel .carousel-indicators {
+  bottom: 103%;
+  text-align: right;
+  width: 80%;
+}
+#TenderCarousel .carousel-indicators li {
+  background-color: transparent;
+  border: 0.05vw solid gray;
+}
+#TenderCarousel .carousel-indicators .active {
+  background-color: gray;
+}
+
         </style>
         <section class="sec3">
             <div class="">
