--- a/obu.html
+++ b/obu.html
@@ -369,7 +369,7 @@
                                 </div>
                                 <div class="item">	
                                     <ul>
-                                    <li><a href="#" target="_blank">Sealed bids (In Two Parts - Financial & Technical separately) are invited for supply of High-End Computer Workstations for Data Interpretation Centre of GERMI vide tender no. GERMI/PRWDIC/2018/015...<strong>Last Date of Submission of bids: 10.12.2018</strong></a></li>
+                                    <!--li><a href="#" target="_blank">Sealed bids (In Two Parts - Financial & Technical separately) are invited for supply of High-End Computer Workstations for Data Interpretation Centre of GERMI vide tender no. GERMI/PRWDIC/2018/015...<strong>Last Date of Submission of bids: 10.12.2018</strong></a></li-->
                                     <!-- <li><a href="Tender/20180706 Tender for development of Algal culture pond.pdf" target="_blank">GERMI invites sealed bids from Contractors for carrying out civil and other miscellaneous work for Algal Development Ponds at GERMI field development site, Near Hi-rise hostel, PDPU, Raisan, Gandhinagar, Guajarat...<strong>Last Date of Submission of bids: 24.07.2018</strong></a></li>	 -->
                                     </ul>
                                 </div>
