--- a/obu.html
+++ b/obu.html
@@ -240,11 +240,56 @@
         </div>
         <!-- NEWS EVENTS -->
         <style>
-            .about-sp{
-     padding: 0px 30px;
+            ::selection{
+    background-color: #060624;
+    color: #fff;
 }
-.com-sp{
+
+ .com-sp{
      padding:100px 0px;
+}
+ .pad-top-0{
+     padding-top:0px;
+}
+ .pad-bot-0{
+     padding-bottom:0px;
+}
+ .pad-bot-70{
+     padding-bottom:70px;
+}
+ .con-title{
+     text-align: center;
+     margin-bottom: 40px;
+}
+ .con-title h2{
+     font-size: 36px;
+     font-family: sans-serif;
+     margin-top: 0px;
+     margin-bottom: 15px;
+     line-height: 40px;
+     color: #fff;
+     text-shadow: 2px 0px 0px #000;
+}
+ .con-title h2 span{
+     font-size: 36px;
+     font-weight:400;
+     color: #000;
+     line-height: 40px;
+     font-family: 'Goudy Old Style';
+}
+ .con-title p{
+     font-size: 18px;
+     color: #137af5;
+     font-weight: 300;
+}
+ .pad-all-20{
+     padding:20px;
+}
+.container {
+     padding-right: 15px;
+     padding-left: 15px;
+     margin-right: auto;
+     margin-left: auto;
 }
         </style>
     <section>
