--- a/obu.html
+++ b/obu.html
@@ -285,6 +285,28 @@
  .pad-all-20{
      padding:20px;
 }
+.ed-flag a{}
+.ed-faci-full-top{}
+.ed-faci-full-top img{
+	width:100%;
+}
+.ed-rsear-dec a span {
+    font-size: 10px;
+}	
+.ed-rsear-dec a{
+	font-size: 10px;
+}
+.ed-rsear-dec h4 a{
+	font-size:15px;
+}
+.ed-rsear-dec {
+    padding: 8px 15px;
+}
+.ed-rsear-img img{
+	width:100%;
+}
+}
+
 .container {
      padding-right: 15px;
      padding-left: 15px;
