--- a/obu.html
+++ b/obu.html
@@ -306,7 +306,27 @@
 	width:100%;
 }
 }
-
+ed-flag a{}
+.ed-faci-full-top{}
+.ed-faci-full-top img{
+	width:100%;
+}
+.ed-faci-full-bot{}
+.ed-faci-full-bot h4{
+	margin-bottom:15px;
+}
+.ed-faci-full-bot h4 a{}
+.ed-faci-full-bot p{
+	font-size:15px;
+}
+.read-line-btn{
+padding: 6px 0px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 14px;
+    height: 35px;
+    text-align: center;
 .container {
      padding-right: 15px;
      padding-left: 15px;
