--- a/obu.html
+++ b/obu.html
@@ -285,6 +285,12 @@
  .pad-all-20{
      padding:20px;
 }
+ .mar-bot-0{
+     margin-bottom:0px;
+}
+ .pad-top-173{
+     padding-top:173px;
+}
 .ed-flag a{}
 .ed-faci-full-top{}
 .ed-faci-full-top img{
