--- a/obu.html
+++ b/obu.html
@@ -291,6 +291,17 @@
  .pad-top-173{
      padding-top:173px;
 }
+img {
+     vertical-align: middle;
+}
+ .img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+     display: block;
+     max-width: 100%;
+     height: auto;
+}
+ .img-rounded {
+     border-radius: 6px;
+}
 .ed-flag a{}
 .ed-faci-full-top{}
 .ed-faci-full-top img{
