--- a/obu.html
+++ b/obu.html
@@ -267,7 +267,7 @@
      margin-top: 0px;
      margin-bottom: 15px;
      line-height: 40px;
-     color: #fff;
+     color: rgb(10, 8, 121);
      text-shadow: 2px 0px 0px #000;
 }
  .con-title h2 span{
