--- a/obu.html
+++ b/obu.html
@@ -365,7 +365,7 @@ padding: 6px 0px;
                                 <li>
 									<div class="ed-rese-grid">
 										<div class="ed-faci-full-top">
-											<img src="img/IIITV_Logo_1x1_small.png" alt="">
+											<img src="img/IIITV_Logo_1x1_small.png" width="400" height="auto">
 										</div>
 										<div class="ed-rsear-dec ed-faci-full-bot">
 											<h4><a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank">125<sup>th</sup> ANNIVERSARY OF De La Salle  College </a></h4>
